Implemented basic operations for working with data.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -1,8 +1,8 @@
 help_add=add – добавить запись в таблицу
 help_bt=bytag <тег> (bt <тег>) – поиск в таблице по тегу
 help_bt_eg=bytag <тег> (bt <тег>) – поиск в таблице по тегу (пример: bt g)
-help_cp=copy <№> <note / login / password / tag> (cp <№> <n / l / p / t>) – скопировать данные из записи
-help_cp_eg=copy <№> <note / login / password / tag> (cp <№> <n / l / p / t>) – скопировать данные из записи (пример: cp 7 n)
+help_cp=copy <№> <note / login / password> (cp <№> <n / l / p>) – скопировать данные из записи
+help_cp_eg=copy <№> <note / login / password> (cp <№> <n / l / p>) – скопировать данные из записи (пример: cp 7 n)
 help_datatypes=типы данных: \
 note = n , login = l , password = p , tag = t
 help_del=delete <№> (del <№>) – удалить запись из таблицы
