Implemented main functionality (except saving) without protection.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -75,3 +75,11 @@ tg_p=p
 c_add2=add
 msg_lang=Для сообщений установлен русский язык.
 msg_unknown=Неизвестная команда.
+msg_namefile=Введите имя или путь: 
+msg_masterpass=Введите мастер пароль (только латинские символы): 
+msg_noentries=< Нет ни одной записи >
+msg_notable=Сначала откройте таблицу или создайте новую.
+edit_note=Введите заметку: 
+edit_login=Введите логин: 
+edit_password=Введите пароль: 
+edit_tag=Введите тег (red / green / blue / yellow / purple): 
