--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -83,3 +83,4 @@ edit_note=Введите заметку:
 edit_login=Введите логин: 
 edit_password=Введите пароль: 
 edit_tag=Введите тег (red / green / blue / yellow / purple): 
+msg_invalid=Неверная команда.
