Quit, capitalized command input, new tag question.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -82,5 +82,8 @@ msg_notable=Сначала откройте таблицу или создайт
 edit_note=Введите заметку: 
 edit_login=Введите логин: 
 edit_password=Введите пароль: 
-edit_tag=Введите тег (red / green / blue / yellow / purple): 
+edit_tag=Добавить тег? (red / green / blue / yellow / purple): 
 msg_invalid=Неверная команда.
+help_q=quit (q) – завершить работу с приложением
+c_quit=quit
+c_q=q
