New table design.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -87,3 +87,10 @@ msg_invalid=Неверная команда.
 help_q=quit (q) – завершить работу с приложением
 c_quit=quit
 c_q=q
+title_id=№
+title_note=Заметка
+title_login=Логин
+title_password=Пароль
+title_tag=Тег
+yes=да
+no=нет
