Implemented protection from data loss when closing file.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -1,3 +1,4 @@
+yes2=y
 help_add=add – добавить запись в таблицу
 help_bt=bytag <тег> (bt <тег>) – поиск в таблице по тегу
 help_bt_eg=bytag <тег> (bt <тег>) – поиск в таблице по тегу (пример: bt g)
@@ -95,3 +96,9 @@ title_tag=Тег
 yes=да
 no=нет
 tb_defaulttitle=Без названия
+msg_unsaved=!! Несохраненные изменения !!\n\
+Напечатайте "save" для сохранения изменений или напечатайте "rollback" для отмены всех изменений.
+c_yes2=y
+c_no2=n
+c_cancel=cancel
+msg_saveornot=У вас есть несохраненные изменения! Сохранить? (y / n / cancel)
