The beginning of implementation of the protection system against wrong actions.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -1,4 +1,3 @@
-yes2=y
 help_add=add – добавить запись в таблицу
 help_bt=bytag <тег> (bt <тег>) – поиск в таблице по тегу
 help_bt_eg=bytag <тег> (bt <тег>) – поиск в таблице по тегу (пример: bt g)
@@ -102,3 +101,10 @@ c_yes2=y
 c_no2=n
 c_cancel=cancel
 msg_saveornot=У вас есть несохраненные изменения! Сохранить? (y / n / cancel)
+msg_emptynamefile=Путь или имя файла не может быть пустым!
+msg_charerror=Имя файла не должно содержать следующие символы: \\ / : * ? " < > |
+msg_emptymasterpass=Мастер пароль не может быть пустым!
+msg_slashmasterpass=К сожалению, мастер пароль не может начинаться с "/"!
+msg_nonlatin=Мастер пароль содержит нелатинские символы!
+msg_incorrectinit=Таблица некорректно проинициализировалась! Возвращено в исходное состояние.
+msg_exception=Возникло необработанное исключение :( Вы можете попробовать снова выполнить команду!
