The second part of implementation of the protection system.
Does not include protection for changing entries.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -108,3 +108,20 @@ msg_slashmasterpass=К сожалению, мастер пароль не мож
 msg_nonlatin=Мастер пароль содержит нелатинские символы!
 msg_incorrectinit=Таблица некорректно проинициализировалась! Возвращено в исходное состояние.
 msg_exception=Возникло необработанное исключение :( Вы можете попробовать снова выполнить команду!
+msg_success=Успешно!
+msg_invalidpass=Неверный пароль!
+msg_openfail=Не удалось открыть файл!
+msg_verfail=К сожалению, данная версия файла не поддерживается!
+msg_filecorrupted=Этот файл поврежден и не может быть открыт!
+msg_emptytable=Нельзя сохранять таблицу без записей!\n\
+Если вы сохраняете в существующий файл, который более не нужен вы можете закрыть приложение и удалить его вручную.\n\
+Если вы создаете новый файл или открываете другой файл, то текущий файл будет закрыт без сохранения.
+msg_errsave=Изменения не были сохранены!!! 
+msg_notsame=Текущая информация не будет корректно расшифрована при открытии файла в следующий раз!
+msg_errdirectory=Не удалось сохранить файл в указанной директории!\n\
+Файл был сохранен в директории приложения.
+msg_errencrypt=Ошибка при шифровании файла.
+msg_errwrite=Ошибка записи данных в файл.
+msg_enternewdata=Введите новый путь и мастер пароль...
+msg_tabchar=Запрещено использование символа табуляции!
+msg_canceled=Отменено!
