The final part of implementation of the protection system.

--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -125,3 +125,8 @@ msg_errwrite=Ошибка записи данных в файл.
 msg_enternewdata=Введите новый путь и мастер пароль...
 msg_tabchar=Запрещено использование символа табуляции!
 msg_canceled=Отменено!
+msg_notag=Записи не был присвоен тег.
+msg_noentry=Записи с таким номером не существует!
+msg_copied=Cкопировано!
+msg_emptysearch=Пустой поисковый запрос!
+msg_unknowntag=Неизвестный тег.
