--- a/jar-app/src/main/resources/text_ru_RU.properties
+++ b/jar-app/src/main/resources/text_ru_RU.properties
@@ -1,29 +1,29 @@
-help_add=add – добавить запись в таблицу
-help_bt=bytag <тег> (bt <тег>) – поиск в таблице по тегу
-help_bt_eg=bytag <тег> (bt <тег>) – поиск в таблице по тегу (пример: bt g)
-help_cp=copy <№> <note / login / password> (cp <№> <n / l / p>) – скопировать данные из записи
-help_cp_eg=copy <№> <note / login / password> (cp <№> <n / l / p>) – скопировать данные из записи (пример: cp 7 n)
+help_add=add - добавить запись в таблицу
+help_bt=bytag <тег> (bt <тег>) - поиск в таблице по тегу
+help_bt_eg=bytag <тег> (bt <тег>) - поиск в таблице по тегу (пример: bt g)
+help_cp=copy <№> <note / login / password> (cp <№> <n / l / p>) - скопировать данные из записи
+help_cp_eg=copy <№> <note / login / password> (cp <№> <n / l / p>) - скопировать данные из записи (пример: cp 7 n)
 help_datatypes=типы данных: \
 note = n , login = l , password = p , tag = t
-help_del=delete <№> (del <№>) – удалить запись из таблицы
-help_del_eg=delete <№> (del <№>) – удалить запись из таблицы (пример: del 14)
-help_ed=edit <№> <note / login / password / tag> <новые данные> (ed <№> <n / l / p / t> <новые данные>) – изменить данные в записи
-help_ed_eg=edit <№> <note / login / password / tag> <новые данные> (ed <№> <n / l / p / t> <новые данные>) – изменить данные в записи (пример: ed 2 l администратор2)
-help_h=h (help / commands) – список всех команд
+help_del=delete <№> (del <№>) - удалить запись из таблицы
+help_del_eg=delete <№> (del <№>) - удалить запись из таблицы (пример: del 14)
+help_ed=edit <№> <note / login / password / tag> <новые данные> (ed <№> <n / l / p / t> <новые данные>) - изменить данные в записи
+help_ed_eg=edit <№> <note / login / password / tag> <новые данные> (ed <№> <n / l / p / t> <новые данные>) - изменить данные в записи (пример: ed 2 l администратор2)
+help_h=h (help / commands) - список всех команд
 help_title_files=## Работа с passtable файлами ##
-help_heg=heg – список всех команд с примерами
-help_language=en / ru – сменить язык сообщений (change message language)
-help_new=new – создать новый файл
-help_op=open <путь> (op <путь>) – открыть существующий файл
-help_op_eg=open <путь> (op <путь>) – открыть существующий файл (пример: op file1)
-help_rollback=rollback – вернуться к последней сохраненной версии файла
-help_s=search <данные> (s <данные>) – поиск в таблице по заметке и логину
-help_s_eg=search <данные> (s <данные>) – поиск в таблице по заметке и логину (пример: s портал)
-help_saveas=saveas – сохранить изменения в файле (возможность изменить путь к файлу и мастер-пароль)
-help_shp=showpassword <№> (shp <№>) – показать пароль конкретной записи
-help_shp_eg=showpassword <№> (shp <№>) – показать пароль конкретной записи (пример: shp 9)
-help_sv=save (sv) – сохранить изменения в файле (без смены пути к файлу и мастер-пароля)
-help_t=table (t) – показать таблицу
+help_heg=heg - список всех команд с примерами
+help_language=en / ru - сменить язык сообщений (change message language)
+help_new=new - создать новый файл
+help_op=open <путь> (op <путь>) - открыть существующий файл
+help_op_eg=open <путь> (op <путь>) - открыть существующий файл (пример: op file1)
+help_rollback=rollback - вернуться к последней сохраненной версии файла
+help_s=search <данные> (s <данные>) - поиск в таблице по заметке и логину
+help_s_eg=search <данные> (s <данные>) - поиск в таблице по заметке и логину (пример: s портал)
+help_saveas=saveas - сохранить изменения в файле (возможность изменить путь к файлу и мастер-пароль)
+help_shp=showpassword <№> (shp <№>) - показать пароль конкретной записи
+help_shp_eg=showpassword <№> (shp <№>) - показать пароль конкретной записи (пример: shp 9)
+help_sv=save (sv) - сохранить изменения в файле (без смены пути к файлу и мастер-пароля)
+help_t=table (t) - показать таблицу
 help_tags=теги: \
 red = r , green = g , blue = b , yellow = y , purple = p
 help_title_table=## Работа с таблицей ##
@@ -84,7 +84,7 @@ edit_login=Введите логин:
 edit_password=Введите пароль: 
 edit_tag=Добавить тег? (red / green / blue / yellow / purple): 
 msg_invalid=Неверная команда.
-help_q=quit (q) – завершить работу с приложением
+help_q=quit (q) - завершить работу с приложением
 c_quit=quit
 c_q=q
 title_id=№
@@ -130,3 +130,5 @@ msg_noentry=Записи с таким номером не существует!
 msg_copied=Cкопировано!
 msg_emptysearch=Пустой поисковый запрос!
 msg_unknowntag=Неизвестный тег.
+c_license=license
+help_license=license - показать лицензионное соглашение
