Added message about non-latin characters for Windows.

--- a/kt-jvm/src/main/resources/text_ru_RU.properties
+++ b/kt-jvm/src/main/resources/text_ru_RU.properties
@@ -78,7 +78,6 @@ msg_unknown=Неизвестная команда.
 msg_namefile=Введите имя или путь: 
 msg_masterpass=Введите мастер пароль (только латинские символы): 
 msg_noentries=< Нет ни одной записи >
-msg_notable=Сначала откройте таблицу или создайте новую.
 edit_note=Введите заметку: 
 edit_login=Введите логин: 
 edit_password=Введите пароль: 
@@ -132,3 +131,6 @@ msg_emptysearch=Пустой поисковый запрос!
 msg_unknowntag=Неизвестный тег.
 c_license=license
 help_license=license - показать лицензионное соглашение
+msg_windows=Warning!\n\
+The application in os "Windows" may not work correctly with non-latin characters!\n\
+It is recommended to use Passtable for Windows.
