Added Russian commands. Added hint for incorrect commands.

--- a/kt-jvm/src/main/resources/text_ru_RU.properties
+++ b/kt-jvm/src/main/resources/text_ru_RU.properties
@@ -9,7 +9,7 @@ help_del=удалить <№> [уд <№>] - удалить запись из т
 help_del_eg=удалить <№> [уд <№>] - удалить запись из таблицы (пример: уд 14)
 help_ed=изменить <№> <заметка / логин / пароль / тег> <новые данные> [из <№> <з / л / п / т> <новые данные>] - изменить данные в записи
 help_ed_eg=изменить <№> <заметка / логин / пароль / тег> <новые данные> [из <№> <з / л / п / т> <новые данные>] - изменить данные в записи (пример: из 2 л администратор2)
-help_h=к [команды / помощь] - список всех команд
+help_h=помощь [h] - список всех команд
 help_title_files=## Работа с passtable файлами ##
 help_heg=ксп - список всех команд с примерами
 help_language=en / ru - сменить язык сообщений (change message language)
@@ -23,65 +23,65 @@ help_saveas=сохркак - сохранить изменения в файле
 help_sv=сохранить [с] - сохранить изменения в файле (без смены пути к файлу и мастер-пароля)
 help_t=таблица [т] - показать таблицу
 help_tags=теги: \
-красный = к , зелёный = з , синий = с , жёлтый = ж , фиолетовый = ф
+красный = к , зеленый = з , синий = с , желтый = ж , фиолетовый = ф
 help_title_table=## Работа с таблицей ##
 help_title_abb=## Сокращения ##
-c_heg=heg
-c_help=help
+c_heg=ксп
+c_help=помощь
 c_en=en
 c_ru=ru
-c_new=new
-c_open=open
-c_op=op
-c_save=save
-c_sv=sv
-c_saveas=saveas
-c_rollback=rollback
+c_new=новый
+c_open=открыть
+c_op=о
+c_save=сохранить
+c_sv=с
+c_saveas=сохркак
+c_rollback=вернуться
 c_add=добавить
-c_edit=edit
-c_ed=ed
+c_edit=изменить
+c_ed=из
 c_delete=удалить
 c_del=уд
-c_copy=copy
-c_cp=cp
-c_search=search
-c_s=s
-c_bytag=bytag
-c_bt=bt
-c_table=table
-c_t=t
-dt_note=note
-dt_n=n
-dt_login=login
-dt_l=l
-dt_password=password
-dt_p=p
-dt_tag=tag
-dt_t=t
-tg_red=red
-tg_r=r
-tg_green=green
-tg_g=g
-tg_blue=blue
-tg_b=b
-tg_yellow=yellow
-tg_y=y
-tg_purple=purple
-tg_p=p
+c_copy=копировать
+c_cp=кп
+c_search=найти
+c_s=н
+c_bytag=потегу
+c_bt=тг
+c_table=таблица
+c_t=т
+dt_note=заметка
+dt_n=з
+dt_login=логин
+dt_l=л
+dt_password=пароль
+dt_p=п
+dt_tag=тег
+dt_t=т
+tg_red=красный
+tg_r=к
+tg_green=зеленый
+tg_g=з
+tg_blue=синий
+tg_b=с
+tg_yellow=желтый
+tg_y=ж
+tg_purple=фиолетовый
+tg_p=ф
 c_add2=д
-msg_lang=Для сообщений установлен русский язык.
-msg_unknown=Неизвестная команда.
+msg_lang=Для сообщений и команд установлен русский язык.
+msg_unknown=Неизвестная команда. Введите "помощь", чтобы отобразить список команд.
 msg_namefile=Введите имя или путь: 
 msg_masterpass=Введите мастер пароль (только латинские символы): 
 msg_noentries=< Нет ни одной записи >
 edit_note=Введите заметку: 
 edit_login=Введите логин: 
 edit_password=Введите пароль: 
-edit_tag=Добавить тег? (красный / зелёный / синий / жёлтый / фиолетовый): 
-msg_invalid=Неверная команда.
+edit_tag=Добавить тег? (красный / зеленый / синий / желтый / фиолетовый): 
+msg_invalid=Неверная команда. Введите "помощь", чтобы отобразить список команд.
 help_q=выход [вв] - завершить работу с приложением
-c_quit=quit
-c_q=q
+c_quit=выход
+c_q=вв
 title_id=№
 title_note=Заметка
 title_login=Логин
@@ -92,9 +92,9 @@ no=нет
 tb_defaulttitle=Без названия
 msg_unsaved=!! Несохраненные изменения !!\n\
 Напечатайте "сохранить" для сохранения изменений или напечатайте "вернуться" для отмены всех изменений.
-c_yes2=y
-c_no2=n
-c_cancel=cancel
+c_yes2=д
+c_no2=н
+c_cancel=отмена
 msg_saveornot=У вас есть несохраненные изменения! Сохранить? (д / н / отмена)
 msg_emptynamefile=Путь или имя файла не может быть пустым!
 msg_charerror=Имя файла не должно содержать следующие символы: \\ / : * ? " < > |
@@ -125,7 +125,7 @@ msg_noentry=Записи с таким номером не существует!
 msg_copied=Скопировано!
 msg_emptysearch=Пустой поисковый запрос!
 msg_unknowntag=Неизвестный тег.
-c_license=license
+c_license=соглашение
 help_license=соглашение - показать лицензионное соглашение
 msg_windows=Warning!\n\
 The application in os "Windows" may not work correctly with non-latin characters!\n\
