Minor fixes. JVM: The main development is over.

--- a/kt-jvm/src/main/resources/text_ru_RU.properties
+++ b/kt-jvm/src/main/resources/text_ru_RU.properties
@@ -128,7 +128,7 @@ msg_unknowntag=Неизвестный тег.
 c_license=соглашение
 help_license=соглашение - показать лицензионное соглашение
 msg_windows=Warning!\n\
-The application in os "Windows" may not work correctly with non-latin characters!\n\
+The application in OS "Windows" may not work correctly with non-latin characters!\n\
 It is recommended to use Passtable for Windows.
 c_password=пароль
 c_ps=пр
