Added protection of empty entry creation. Removed case sensitivity in search.

--- a/kt-jvm/src/main/resources/text_ru_RU.properties
+++ b/kt-jvm/src/main/resources/text_ru_RU.properties
@@ -135,3 +135,4 @@ c_ps=пр
 help_ps=пароль <№> [пр <№>] - показать пароль конкретной записи
 help_ps_eg=пароль <№> [пр <№>] - показать пароль конкретной записи (пример: пр 9)
 help_abbreviated=[..] - альтернативная версия команды
+msg_erradd=Отменено! Заметка или логин и пароль ничего не содержат.
