Fixed bugs in the search.

--- a/kt-jvm/src/main/resources/text_ru_RU.properties
+++ b/kt-jvm/src/main/resources/text_ru_RU.properties
@@ -136,3 +136,4 @@ help_ps=пароль <№> [пр <№>] - показать пароль конк
 help_ps_eg=пароль <№> [пр <№>] - показать пароль конкретной записи (пример: пр 9)
 help_abbreviated=[..] - альтернативная версия команды
 msg_erradd=Отменено! Заметка или логин и пароль ничего не содержат.
+msg_nopass=Запись не содержит пароля!
