--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -144,3 +144,17 @@ help_abbreviated=[..] - альтернативная версия команды
 msg_erradd=Отменено! Заметка или логин и пароль ничего не содержат.
 msg_nopass=Запись не содержит пароля!
 key_space=пробел
+header_version=версия: 
+header_projectpage=Страница проекта: 
+header_projectrepo=Репозиторий проекта: 
+header_h=Введите "h", чтобы отобразить список команд.
+header_ru=Введите "en", чтобы сменить язык на Английский (English).
+header_license=Введите "соглашение", чтобы прочитать лицензионное соглашение.
+msg_checkingupdates=Проверка обновлений...
+msg_uptodate=Приложение находится в актуальном состоянии.
+msg_failconnect=Не удалось подключиться к серверу!
+msg_newversion=Доступна новая версия! Загрузить? (д/н)
+msg_downloading=Загрузка...
+msg_dlsuccess1=Успешно! Откройте
+msg_dlsuccess2=в директории приложения для продолжения работы.
+msg_dlfail=Не удалось загрузить!
