Improved table display. Added command "show".

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -158,3 +158,10 @@ msg_downloading=Загрузка...
 msg_dlsuccess1=Успешно! Откройте
 msg_dlsuccess2=в директории приложения для продолжения работы.
 msg_dlfail=Не удалось загрузить!
+msg_showcontents=Напечатайте "показать <№>", чтобы показать всё содержимое записи.
+msg_showpassword1=напечатайте "пр
+msg_showpassword2=", чтобы показать пароль
+c_show=показать
+c_sh=пк
+help_sh=показать <№> [пк <№>] - показать всё содержимое конкретной записи
+help_sh_eg=показать <№> [пк <№>] - показать всё содержимое конкретной записи (пример: пк 12)
