Added Log'n'Pass system.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -142,6 +142,7 @@ help_ps=пароль <№> [пр <№>] - показать пароль конк
 help_ps_eg=пароль <№> [пр <№>] - показать пароль конкретной записи (пример: пр 9)
 help_abbreviated=[..] - альтернативная версия команды
 msg_erradd=Отменено! Заметка или логин и пароль ничего не содержат.
+msg_nologin=Запись не содержит логина!
 msg_nopass=Запись не содержит пароля!
 key_space=пробел
 header_version=версия: 
@@ -165,3 +166,9 @@ c_show=показать
 c_sh=пк
 help_sh=показать <№> [пк <№>] - показать всё содержимое конкретной записи
 help_sh_eg=показать <№> [пк <№>] - показать всё содержимое конкретной записи (пример: пк 12)
+c_lnp=лнп
+help_lnp=лнп <№> - Log'n'Pass (скопировать логин, затем пароль)
+help_lnp_eg=лнп <№> - Log'n'Pass (скопировать логин, затем пароль) (пример: лнп 1)
+msg_lnpcanceled=Отменено! Запись содержит только заметку!
+msg_lnplogin=Логин скопирован! Нажмите Enter, чтобы скопировать пароль.
+msg_lnppassword=Пароль скопирован! Нажмите Enter, чтобы очистить буфер обмена и продолжить.
