Copying to clipboard is made safe.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -172,3 +172,5 @@ help_lnp_eg=лнп <№> - Log'n'Pass (скопировать логин, зат
 msg_lnpcanceled=Отменено! Запись содержит только заметку!
 msg_lnplogin=Логин скопирован! Нажмите Enter, чтобы скопировать пароль.
 msg_lnppassword=Пароль скопирован! Нажмите Enter, чтобы очистить буфер обмена и продолжить.
+msg_errcopy=Используемая ОС не позволяет приложениям записывать данные в буфер обмена, или необходимые библиотеки JRE для этого действия не были найдены (возможная причина: установлен только пакет "openjdk-8-jre-headless", установите полный пакет "openjdk-8-jre").
+msg_errlnp=Система Log'n'Pass недоступна! Причина:
