Upgraded Kotlin & Gradle. Functions have been updated to the latest version. Implemented password confirmation.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -72,11 +72,15 @@ c_add2=д
 msg_lang=Для сообщений и команд установлен русский язык.
 msg_unknown=Неизвестная команда. Введите "помощь", чтобы отобразить список команд.
 msg_namefile=Введите имя или путь: 
-msg_masterpass=Введите мастер пароль (A..z, цифры, символы): 
+msg_masterpass=Введите мастер пароль: 
+msg_masterpassnew=Введите мастер пароль (A..z, цифры, символы): 
+msg_confirm=Подтвердите: 
+msg_dontmatch=Пароли не совпадают! Введите пароль повторно.
 msg_noentries=< Нет ни одной записи >
 edit_note=Введите заметку: 
 edit_login=Введите логин: 
 edit_password=Введите пароль: 
+edit_confirm=Подтвердите (оставьте пустым для пропуска): 
 edit_tag=Добавить тег? (красный / зеленый / синий / желтый / фиолетовый): 
 msg_invalid=Неверная команда. Введите "помощь", чтобы отобразить список команд.
 help_q=выход [вв] - завершить работу с приложением
