Refactoring: Master password -> Primary password.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -72,8 +72,8 @@ c_add2=д
 msg_lang=Для сообщений и команд установлен русский язык.
 msg_unknown=Неизвестная команда. Введите "помощь", чтобы отобразить список команд.
 msg_namefile=Введите имя или путь: 
-msg_masterpass=Введите мастер пароль: 
-msg_masterpassnew=Введите мастер пароль (A..z, цифры, символы): 
+msg_primarypassword=Введите основной пароль: 
+msg_primarypasswordnew=Введите основной пароль (A..z, цифры, символы): 
 msg_confirm=Подтвердите: 
 msg_dontmatch=Пароли не совпадают! Введите пароль повторно.
 msg_noentries=< Нет ни одной записи >
@@ -106,10 +106,10 @@ msg_whitespacenamefile=Имя файла не должно начинаться 
 msg_invalidwordnamefile=Имя файла является недопустимым словом для ОС Windows!\n\
 Недопустимые слова: 
 msg_longnamefile=Имя файла слишком длинное!
-msg_emptymasterpass=Мастер пароль не может быть пустым!
-msg_slashmasterpass=К сожалению, мастер пароль не может начинаться с "/"!
-msg_longmasterpass=Мастер пароль слишком длинный (макс. 32 символа)!
-msg_invalidcharmasterpass=Мастер пароль содержит недопустимый символ!\n\
+msg_emptyprimarypassword=Основной пароль не может быть пустым!
+msg_slashprimarypassword=К сожалению, основной пароль не может начинаться с "/"!
+msg_longprimarypassword=Основной пароль слишком длинный (макс. 32 символа)!
+msg_invalidcharprimarypassword=Основной пароль содержит недопустимый символ!\n\
 Разрешённые символы:
 msg_incorrectinit=Таблица некорректно проинициализировалась! Возвращено в исходное состояние.
 msg_exception=Возникло необработанное исключение :( Вы можете попробовать снова выполнить команду!
