Refactoring: Login -> Username.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -2,7 +2,7 @@ help_add=добавить [д] - добавить запись в таблицу
 help_bt=потегу <тег> [тг <тег>] - поиск в таблице по тегу
 help_bt_eg=потегу <тег> [тг <тег>] - поиск в таблице по тегу (пример: тг к)
 help_cp=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи
-help_cp_eg=копировать <№> <note / login / password> [кп <№> <з / л / п>] - скопировать данные из записи (пример: кп 7 з)
+help_cp_eg=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи (пример: кп 7 з)
 help_datatypes=типы данных: \
 заметка = з , логин = л , пароль = п , тег = т
 help_del=удалить <№> [уд <№>] - удалить запись из таблицы
@@ -52,8 +52,8 @@ c_table=таблица
 c_t=т
 dt_note=заметка
 dt_n=з
-dt_login=логин
-dt_l=л
+dt_username=логин
+dt_u=л
 dt_password=пароль
 dt_p=п
 dt_tag=тег
@@ -78,7 +78,7 @@ msg_confirm=Подтвердите:
 msg_dontmatch=Пароли не совпадают! Введите пароль повторно.
 msg_noentries=< Нет ни одной записи >
 edit_note=Введите заметку: 
-edit_login=Введите логин: 
+edit_username=Введите логин: 
 edit_password=Введите пароль: 
 edit_confirm=Подтвердите (оставьте пустым для пропуска): 
 edit_tag=Добавить тег? (красный / зеленый / синий / желтый / фиолетовый): 
@@ -88,7 +88,7 @@ c_quit=выход
 c_q=вв
 title_id=№
 title_note=Заметка
-title_login=Логин
+title_username=Логин
 title_password=Пароль
 title_tag=Тег
 yes=да
@@ -146,7 +146,7 @@ help_ps=пароль <№> [пр <№>] - показать пароль конк
 help_ps_eg=пароль <№> [пр <№>] - показать пароль конкретной записи (пример: пр 9)
 help_abbreviated=[..] - альтернативная версия команды
 msg_erradd=Отменено! Заметка или логин и пароль ничего не содержат.
-msg_nologin=Запись не содержит логина!
+msg_nousername=Запись не содержит логина!
 msg_nopass=Запись не содержит пароля!
 key_space=пробел
 header_version=версия: 
@@ -174,7 +174,7 @@ c_lnp=лнп
 help_lnp=лнп <№> - Log'n'Pass (скопировать логин, затем пароль)
 help_lnp_eg=лнп <№> - Log'n'Pass (скопировать логин, затем пароль) (пример: лнп 1)
 msg_lnpcanceled=Отменено! Запись содержит только заметку!
-msg_lnplogin=Логин скопирован! Нажмите Enter, чтобы скопировать пароль.
+msg_lnpusername=Логин скопирован! Нажмите Enter, чтобы скопировать пароль.
 msg_lnppassword=Пароль скопирован! Нажмите Enter, чтобы очистить буфер обмена и продолжить.
 msg_errcopy=Используемая ОС не позволяет приложениям записывать данные в буфер обмена, или необходимые библиотеки JRE для этого действия не были найдены (возможная причина: установлен только пакет "openjdk-8-jre-headless", установите полный пакет "openjdk-8-jre").
 msg_errlnp=Система Log'n'Pass недоступна! Причина:
