Improved printCommandsList(): now requires fewer help lines. Implemented additional methods for TextBundle.

--- a/src/main/resources/text_ru_RU.properties
+++ b/src/main/resources/text_ru_RU.properties
@@ -1,26 +1,20 @@
 help_add=добавить [д] - добавить запись в таблицу
-help_bt=потегу <тег> [тг <тег>] - поиск в таблице по тегу
-help_bt_eg=потегу <тег> [тг <тег>] - поиск в таблице по тегу (пример: тг к)
-help_cp=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи
-help_cp_eg=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи (пример: кп 7 з)
+help_bt=потегу <тег> [тг <тег>] - поиск в таблице по тегу %s
+help_cp=копировать <№> <заметка / логин / пароль> [кп <№> <з / л / п>] - скопировать данные из записи %s
 help_datatypes=типы данных: \
 заметка = з , логин = л , пароль = п , тег = т
-help_del=удалить <№> [уд <№>] - удалить запись из таблицы
-help_del_eg=удалить <№> [уд <№>] - удалить запись из таблицы (пример: уд 14)
-help_ed=изменить <№> <заметка / логин / пароль / тег> <новые данные> [из <№> <з / л / п / т> <новые данные>] - изменить данные в записи
-help_ed_eg=изменить <№> <заметка / логин / пароль / тег> <новые данные> [из <№> <з / л / п / т> <новые данные>] - изменить данные в записи (пример: из 2 л администратор2)
+help_del=удалить <№> [уд <№>] - удалить запись из таблицы %s
+help_ed=изменить <№> <заметка / логин / пароль / тег> <новые данные> [изм <№> <з / л / п / т> <новые данные>] - изменить данные в записи %s
 help_h=помощь [h] - список всех команд
 help_title_files=## Работа с passtable файлами ##
 help_heg=ксп - список всех команд с примерами
 help_language=en / ru - сменить язык сообщений (change message language)
 help_new=новый - создать новый файл
-help_op=открыть <путь> [о <путь>] - открыть существующий файл
-help_op_eg=открыть <путь> [о <путь>] - открыть существующий файл (пример: о файл1)
+help_op=открыть <путь> [откр <путь>] - открыть существующий файл %s
 help_rollback=вернуться - вернуться к последней сохраненной версии файла
-help_s=найти <данные> [н <данные>] - поиск в таблице по заметке и логину
-help_s_eg=найти <данные> [н <данные>] - поиск в таблице по заметке и логину (пример: н портал)
-help_saveas=сохркак - сохранить изменения в файле (возможность изменить путь к файлу и мастер-пароль)
-help_sv=сохранить [с] - сохранить изменения в файле (без смены пути к файлу и мастер-пароля)
+help_s=поиск <данные> [п <данные>] - поиск в таблице по заметке и логину %s
+help_saveas=сохркак - сохранить изменения в файле (возможность изменить путь к файлу и основной пароль)
+help_sv=сохранить [сохр] - сохранить изменения в файле (без смены пути к файлу и основного пароля)
 help_t=таблица [т] - показать таблицу
 help_tags=теги: \
 красный = к , зеленый = з , синий = с , желтый = ж , фиолетовый = ф
@@ -42,13 +36,13 @@ c_saveas=сохркак
 c_rollback=вернуться
 c_add=добавить
 c_edit=изменить
-c_ed=из
+c_ed=изм
 c_delete=удалить
 c_del=уд
 c_copy=копировать
 c_cp=кп
-c_search=найти
-c_s=н
+c_search=поиск
+c_s=п
 c_bytag=потегу
 c_bt=тг
 c_table=таблица
@@ -135,7 +129,7 @@ msg_errdirectory=Не удалось сохранить файл в указан
 Файл был сохранен в директории приложения.
 msg_errencrypt=Ошибка при шифровании файла.
 msg_errwrite=Ошибка записи данных в файл.
-msg_enternewdata=Введите новый путь и мастер пароль...
+msg_enternewdata=Введите новый путь и основной пароль...
 msg_tabchar=Запрещено использование символа табуляции!
 msg_canceled=Отменено!
 msg_notag=Записи не был присвоен тег.
@@ -148,8 +142,7 @@ help_license=соглашение - показать лицензионное с
 msg_windows=К сожалению, добавление элементов, содержащих нелатинские символы, через это приложение в Windows небезопасно. Используйте приложение Passtable для Windows, чтобы сделать это.
 c_password=пароль
 c_ps=пр
-help_ps=пароль <№> [пр <№>] - показать пароль конкретной записи
-help_ps_eg=пароль <№> [пр <№>] - показать пароль конкретной записи (пример: пр 9)
+help_ps=пароль <№> [пр <№>] - показать пароль конкретной записи %s
 help_abbreviated=[..] - альтернативная версия команды
 msg_erradd=Отменено! Заметка или логин и пароль ничего не содержат.
 msg_nousername=Запись не содержит логина!
@@ -174,14 +167,13 @@ msg_showpassword1=напечатайте "пр
 msg_showpassword2=", чтобы показать пароль
 c_show=показать
 c_sh=пк
-help_sh=показать <№> [пк <№>] - показать всё содержимое конкретной записи
-help_sh_eg=показать <№> [пк <№>] - показать всё содержимое конкретной записи (пример: пк 12)
+help_sh=показать <№> [пк <№>] - показать всё содержимое конкретной записи %s
 c_lnp=лнп
-help_lnp=лнп <№> - Log'n'Pass (скопировать логин, затем пароль)
-help_lnp_eg=лнп <№> - Log'n'Pass (скопировать логин, затем пароль) (пример: лнп 1)
+help_lnp=лнп <№> - Log'n'Pass (скопировать логин, затем пароль) %s
 msg_lnpcanceled=Отменено! Запись содержит только заметку!
 msg_lnpusername=Логин скопирован! Нажмите Enter, чтобы скопировать пароль.
 msg_lnppassword=Пароль скопирован! Нажмите Enter, чтобы очистить буфер обмена и продолжить.
 msg_errcopy=Используемая ОС не позволяет приложениям записывать данные в буфер обмена, или необходимые библиотеки JRE для этого действия не были найдены (возможная причина: установлен только пакет "openjdk-8-jre-headless", установите полный пакет "openjdk-8-jre").
 msg_errlnp=Система Log'n'Pass недоступна! Причина:
 msg_passwordmac=В macOS вы не можете добавить элемент с паролем, содержащим нелатинские символы. Однако, вы можете установить любой пароль при редактировании элемента.
+help_example=(пример: %s)
